--- a/mail-worker/wrangler-dev.toml
+++ b/mail-worker/wrangler-dev.toml
@@ -11,11 +11,11 @@ ip = "0.0.0.0"
 [[d1_databases]]
 binding = "db"
 database_name = "email"
-database_id = "a1c1a63a-6ef5-4e6d-8e8c-b6d9e8feb810"
+database_id = "546880aa-ddf9-431d-8495-d3ca6d14029d"
 
 [[kv_namespaces]]
 binding = "kv"
-id = "2io01d4b299e481b9de060ece9e7785c"
+id = "67cf5df96da84c0daae330820fbc5626"
 
 #[[r2_buckets]]
 #binding = ""
@@ -26,8 +26,8 @@ binding = "assets"
 directory = "./dist"
 
 [vars]
-domain = ["example.com", "example2.com"]
-admin = "admin@example.com"
+domain = ["vip.com","why.xyz","plao.com","qpao.com","wait.com"]
+admin = "admin@vip.com"
 jwt_secret = "K8x@r!3XqZ7#bLm$9pV&yTfC1W*sD2Nv%Q@4Zh^gRb6&UsP!m"
 r2_domain = ""
 site_key = ""
