--- a/mail-worker/wrangler-dev.toml
+++ b/mail-worker/wrangler-dev.toml
@@ -26,8 +26,8 @@ binding = "assets"
 directory = "./dist"
 
 [vars]
-domain = ["vip.com","why.xyz","plao.com","qpao.com","wait.com"]
-admin = "admin@vip.com"
+domain = ["vip.com","why.xyz","plao.com","qpao.com","wait.com","deeplogic.dpdns.org"]
+admin = "admin@deeplogic.dpdns.org"
 jwt_secret = "K8x@r!3XqZ7#bLm$9pV&yTfC1W*sD2Nv%Q@4Zh^gRb6&UsP!m"
 r2_domain = ""
 site_key = ""
