--- a/mail-worker/wrangler-dev.toml
+++ b/mail-worker/wrangler-dev.toml
@@ -26,7 +26,7 @@ binding = "assets"
 directory = "./dist"
 
 [vars]
-domain = ["vip.com","why.xyz","plao.com","qpao.com","wait.com","deeplogic.dpdns.org"]
+domain = ["deeplogic.dpdns.org","azxad.ip-ddns.com","kuins.ddns-ip.net","musickzap.ip-ddns.com"]
 admin = "admin@deeplogic.dpdns.org"
 jwt_secret = "K8x@r!3XqZ7#bLm$9pV&yTfC1W*sD2Nv%Q@4Zh^gRb6&UsP!m"
 r2_domain = ""
